--- a/templates/HFC/layout.html
+++ b/templates/HFC/layout.html
@@ -53,6 +53,8 @@
                                 <a href="{% url 'projects' %}">Projects</a></li>
                             <li class="{% if url_name == 'community' %}active{% endif %}">
                                 <a href="{% url 'community' %}">Community</a></li>
+                            <li class="{% if url_name == 'events' %}active{% endif %}">
+                                <a href="{% url 'events' %}">Events</a></li>
                             <li class="{% if url_name == 'andablog' %}active{% endif %}">
                                 <a href="{% url 'blog' %}">Blog</a></li>
                             <li class="menu__hasChild"><a href="{% url 'about' %}">About</a>
