Center/Chapter Pages Done #186

--- a/templates/HFC/community_chapter.html
+++ b/templates/HFC/community_chapter.html
@@ -18,6 +18,8 @@
             <h1>{{chapter.organization_name}}</h1>
             <p class="large">
                 Inviting students from various colleges to join our community
+                <a href="{% url 'chapter_signup' chapter.organization_name_slug %}" class="btn btn--hfc">Join as a member</a>
+
             </p>
         </div>
     </div>
