--- a/templates/EventsEngine/event_participant_welcome_email.html
+++ b/templates/EventsEngine/event_participant_welcome_email.html
@@ -10,8 +10,7 @@
         <tr>
           <td>
             <p>Dear {{name}},</p>
-            <p>Thank you for signing up as a member of our community. Please check out our ongoing projects and understand how you can contribute further.</p>
-            <p>We need active help from both working and non-working professionals like you, to affect social change.</p>
+            <p>{{content}}</p>
               <table role="presentation" border="0" cellpadding="0" cellspacing="0" class="btn btn-primary">
               <tbody>
                   <tr>
