--- a/templates/HFC/footer.html
+++ b/templates/HFC/footer.html
@@ -35,6 +35,7 @@
                         <li><a href="{% url 'projects' %}">Projects</a></li>
                         <li><a href="{% url 'community' %}">Community</a></li>
                         <li><a href="{% url 'job' %}">Join Core Team</a></li>
+                        <li><a href="{% url 'events' %}">Ongoing Events</a></li>
                     </ul>
                 </div>
                 <div class="footer__menu">
