--- a/templates/EventsEngine/event_list.html
+++ b/templates/EventsEngine/event_list.html
@@ -8,6 +8,7 @@
 <meta property="og:type" content="article">
 <meta property="og:image" content="https://www.hackforchange.co.in/static/images/hfc.png">
 <meta property="og:url" content="">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
 {% endblock %}
 {% block title %} Events | Hack For Change {% endblock %}
 
@@ -16,7 +17,7 @@
 <div class="banner-wrap">
     <div class="content-width sm-content-width">
         <div class="banner__main">
-            <h1>Events</h1>
+            <h1>Ongoing Events</h1>
             <p class="large">Ongoing events and workshops to empower community</p>
         </div>
     </div>
@@ -27,41 +28,43 @@
 <div id="main-wrap" class="main__large-pd">
     <div class="content-width">
         <div class="main">
+
             <section id="contents">
+               
                 {% for events_list in event_list  %}
                 <article class="post-blog">
-                    <h4 ><a href="{% url 'event_detail' events_list.title_slug  %}">{{events_list.title}}</a></h4>
-                        <div class="badge-sec badge-sec__alt"><strong>Registration Status: </strong><span class="badge">{{events_list.registration_status}}</span></div>
+                        <div class="row">
+                            <div class="col-8 col-m-8 col-s-12"><h4 ><a href="{% url 'event_detail' events_list.title_slug  %}">{{events_list.title}}</a></h4></div>
+                            {% if events_list.registration == "Registration Open" %}
+                                <div class="col-4 col-m-8 col-s-12">  <div style="font-size: .80em;" class="badge bg-success">{{events_list.registration}}</div></div>
+                            {% else %}
+                                <div class="col-4 col-m-8 col-s-12">  <div style="font-size: .80em;" class="badge bg-danger">{{events_list.registration}}</div></div>
+                            {% endif %}
+                        </div>
+  
+                      
                     <p>{{events_list.description}}</p>
                     <div>
 
                     </div>
-                    <div class="badge-sec badge-sec__alt">
-                        <table class="table table-borderless">
-
-                        <tbody>
-                            <tr>
-                            <th scope="row"></th>
-                            <td><strong>&nbsp;&nbsp;Start </strong></td>
-                            <td><strong>&nbsp;&nbsp;End </strong></td>
-                            <td><strong>&nbsp;Type </strong></td>
-                           
-                            </tr>
-                            <tr>
-                            <th scope="row"></th>
-                            <td><span class="badge badge--yellow">{{events_list.start_date}}&nbsp;</span></td>
-                            <td><span class="badge badge--yellow">{{events_list.end_date}}&nbsp;</span></td>
-                            <td><span class="badge badge--yellow">{{events_list.event_type}}</span></td>
-                
-                            </tr>
-                        </tbody>
-                        </table>
+                        <div class="row">
+                            <div class="col-3 col-md-3 col-s-12"><strong>Start </strong></div>
+                            <div class="col-3 col-md-3 col-s-12"><strong>End </strong></div>
+                            <div class="col-3 col-md-3 col-s-12"><strong>Event Type</strong> </div>
+                            <div class="col-3 col-md-3 col-s-12"><a class="btn btn--border" href="{% url 'event_detail' events_list.title_slug  %}">More</a></div>
                         </div>
-                    <a class="btn btn--border" href="{% url 'event_detail' events_list.title_slug  %}">Explore</a>
+                         <div class="row">
+                            <div class="col-3 col-md-3 col-s-12"><span >{{events_list.start_date|date:"jS M o"}}</span></div>
+                            <div class="col-3 col-md-3 col-s-12"><span>{{events_list.end_date|date:"jS M o"}}</span></div>
+                            <div class="col-3 col-md-3 col-s-12">{{events_list.event_type}}</span> </div>
+                            <div class="col-3 col-md-3 col-s-12"></div>
+                        </div>
+               
                 </article>
                 
                 {% endfor %}
             </section>
+
             <!--contents -->
             <aside id="sidebar">
                 <div class="sidebar__member-sec">
@@ -103,6 +106,7 @@
 {% endblock %}
 {%block js%}
 <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
 <script
     type='text/javascript'>(function ($) { window.fnames = new Array(); window.ftypes = new Array(); fnames[0] = 'EMAIL'; ftypes[0] = 'email'; fnames[1] = 'FNAME'; ftypes[1] = 'text'; fnames[2] = 'LNAME'; ftypes[2] = 'text'; fnames[3] = 'ADDRESS'; ftypes[3] = 'address'; fnames[4] = 'PHONE'; ftypes[4] = 'phone'; fnames[5] = 'BIRTHDAY'; ftypes[5] = 'birthday'; }(jQuery)); var $mcj = jQuery.noConflict(true);</script>
 {%endblock%}
