--- a/templates/EventsEngine/event_list.html
+++ b/templates/EventsEngine/event_list.html
@@ -43,7 +43,7 @@
                         </div>
   
                       
-                    <p>{{events_list.description}}</p>
+                    <p>{{events_list.description|safe}}</p>
                     <div>
 
                     </div>
