--- a/templates/EventsEngine/event_participant_welcome_email.html
+++ b/templates/EventsEngine/event_participant_welcome_email.html
@@ -10,7 +10,7 @@
         <tr>
           <td>
             <p>Dear {{name}},</p>
-            <p>{{content}}</p>
+            <p>{{content|safe}}</p>
               <table role="presentation" border="0" cellpadding="0" cellspacing="0" class="btn btn-primary">
               <tbody>
                   <tr>
