Fixed Internal Email not working for events page

--- a/templates/EventsEngine/event_participant_detail_internal_email.html
+++ b/templates/EventsEngine/event_participant_detail_internal_email.html
@@ -9,7 +9,7 @@
       <table role="presentation" border="0" cellpadding="0" cellspacing="0">
         <tr>
           <td>
-            <p>A new community member signed up to {{contributor.organization_id}}.</p>
+            <p>A new community member signed up to {{event.title}}</p>
             <p>Name :{{contributor.name}}</p>
             <p>Mobile :{{contributor.contact_number}}</p>
             <p>linkedin :{{contributor.linkedin_profile}}</p>
