--- a/templates/EventsEngine/event_signup_thanks.html
+++ b/templates/EventsEngine/event_signup_thanks.html
@@ -17,10 +17,11 @@
             <div class="thanku-main-img">
                 <img src="{% static 'images/thank-you-img.svg' %}"> 
             </div>
+            <br>
             <div class="thanku-heading">
-               <h3>Thank you for signing up as a community member. We will keep you posted on the latest news, 
-                events and updates from the community.</h3>
+               <h3style="font-weight:500;">Thank you for signing up for {{event.title}}.</h3>
            </div>
+            <h3style="font-weight:500;"> We will keep you posted on the latest news, events and updates from the community.</h3>
         </div>
     </div>
 <!-- Main Ends -->
