--- a/templates/EventsEngine/event_detail.html
+++ b/templates/EventsEngine/event_detail.html
@@ -6,8 +6,27 @@
 <meta name="description" property="og:description" content="">
 <meta property="og:type" content="article">
 <meta property="og:image" content="https://www.hackforchange.co.in/static/images/hfc.png">
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+<style>
+.flex-container {
+  display: flex;
+  flex-wrap: wrap;
+}
 
+.flex-item-left {
+  flex: 75%;
+}
+
+.flex-item-right {
+  flex: 25%;
+}
+
+/* Responsive layout - makes a one column layout instead of a two-column layout */
+@media (max-width: 800px) {
+  .flex-item-right, .flex-item-left {
+    flex: 100%;
+  }
+}
+</style>
 <meta property="og:url" content="">
 {% endblock %}
 {% block title %} Event Detail | Hack For Change {% endblock %}
@@ -30,26 +49,47 @@
     <div class="content-width">
         <div class="main">
             <section id="contents">
-                <div class="blog-single">
-                        <div class="row">
-                            <div class="col-8 col-m-8 col-s-12">
-                            <h4 >{{event.title |safe}}</h4></div>
-                            {% if event.registration == "Registration Open" %}
-                                <div class="col-4 col-m-8 col-s-12">  <div style="font-size: .80em;" class="badge bg-success">{{event.registration}}</div></div>
-                            {% else %}
-                                <div class="col-4 col-m-8 col-s-12">  <div style="font-size: .80em;" class="badge bg-danger">{{event.registration}}</div></div>
-                            {% endif %}
+
+            <div class="blog-single">
+
+                <div class="blog-single__content">      
+                    <div class="flex-container">
+                        <div class="flex-item-left">
+                            <div class=""><h4 >{{event.title |safe}}</h4></div><br>
                         </div>
-                        <br>
-                    <div class="blog-single__content">
-                        {% if event.start_date %}
-                        <div><strong>Start: </strong><span>{{event.start_date|date:"jS M o"}}</span></div><br>
-                        {% endif %}
+                        <div class="flex-item-right">
+
+                            {% if event.registration == "Registrations Open" %}
+
+                                <div class="badge-sec" ><div  class="badge badge--yellow" style="background: rgba(0, 255, 0, 0.25);">{{event.registration}}</div>
+
+                            {% else %}
+
+                                <div class="badge-sec" ><div  class="badge badge--yellow" style="background: rgba(255, 0, 0, 0.25);">{{event.registration}}</div>
+
+                            {% endif %}
+                                <br><br>
+                                                        <div class="badge-sec" ><div  class="badge">{{event.event_type}}</div>
                         
-                        {% if event.end_date %}
-                            <div><strong>End: &nbsp;&nbsp;</strong><span>{{event.end_date|date:"jS M o"}}</span></div>
-                        {% endif %}
-                        <br>
+                            
+                        </div>
+                    </div>
+
+                </div>  
+
+            </div>  
+            
+            <div class="blog-single">
+
+                <div class="blog-single__content">
+
+                    
+             
+                        <div>Start:&nbsp;<span>{{event.start_date|date:"F j, o"}}</span></div><br>
+               
+                        <div>End: &nbsp;&nbsp;<span>{{event.end_date|date:"F j, o"}}</span></div>
+               
+                         <br>
                         {% if event.description %}
                           <p class="large sbold">Description</p>
                           <p style="text-align:justify;">{{event.description|safe}}</p>
@@ -58,16 +98,12 @@
                           <p class="large sbold">Agenda</p>
                           <p style="text-align:justify;">{{event.agenda|safe}}</p>
                         {% endif %}
-                        {% if event.event_type %}
-                          <p class="large sbold">Event Type</p>
-                          <p style="text-align:justify;">{{event.event_type}}</p>
-                        {% endif %}
                           
                     </div>  
 
                 </div>  
-                {% if "Registration Open" == event.registration|stringformat:"s" %}
-                <a class="btn btn--info" href="{% url 'event_sign_up' event.title_slug  %}">SignUp for Event</a>
+                {% if "Registrations Open" == event.registration|stringformat:"s" %}
+                <a class="btn btn--info" href="{% url 'event_sign_up' event.title_slug  %}">Signup for event</a>
                 {% endif %}
             <br><br>
             </section>
@@ -111,7 +147,6 @@
 {%endblock%}
 
 {% block js %}
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
 
 <script>
    
