--- a/templates/EventsEngine/event_list.html
+++ b/templates/EventsEngine/event_list.html
@@ -8,7 +8,49 @@
 <meta property="og:type" content="article">
 <meta property="og:image" content="https://www.hackforchange.co.in/static/images/hfc.png">
 <meta property="og:url" content="">
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+<style>
+.flex-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.flex-item-top-left {
+  flex: 75%;
+}
+
+.flex-item-top-right {
+  flex: 25%;
+}
+
+.flex-item-bottom-left {
+  flex: 25%;
+}
+
+.flex-item-bottom-middle-left {
+  flex: 25%;
+}
+
+.flex-item-bottom-middle-right {
+  flex: 25%;
+}
+
+.flex-item-bottom-right {
+  flex: 25%;
+}
+
+/* Responsive layout - makes a one column layout instead of a two-column layout */
+@media (max-width: 800px) {
+  .flex-item-right, .flex-item-left {
+    flex: 100%;
+  }
+}
+
+@media (max-width: 800px) {
+  .flex-item-bottom-right, .flex-item-bottom-left, .flex-item-bottom-middle-left, .flex-item-bottom-middle-right {
+    flex: 100%;
+  }
+}
+</style>
 {% endblock %}
 {% block title %} Events | Hack For Change {% endblock %}
 
@@ -33,32 +75,50 @@
                
                 {% for events_list in event_list  %}
                 <article class="post-blog">
-                        <div class="row">
-                            <div class="col-8 col-m-8 col-s-12"><h4 ><a href="{% url 'event_detail' events_list.title_slug  %}">{{events_list.title}}</a></h4></div>
-                            {% if events_list.registration == "Registrations Open" %}
-                                <div class="col-4 col-m-8 col-s-12">  <div style="font-size: .80em;" class="badge bg-success">{{events_list.registration}}</div></div>
-                            {% else %}
-                                <div class="col-4 col-m-8 col-s-12">  <div style="font-size: .80em;" class="badge bg-danger">{{events_list.registration}}</div></div>
-                            {% endif %}
+                     <div class="flex-container">
+                        <div class="flex-item-top-left">
+                            <div class=""><h4 >{{events_list.title |safe}}</h4></div>
                         </div>
-  
+                        <div class="flex-item-top-right">
+
+                            {% if events_list.registration == "Registrations Open" %}
+
+                                <div class="badge-sec" ><div  class="badge badge--yellow" style="background: rgba(0, 255, 0, 0.25);">{{events_list.registration}}</div>
+
+                            {% else %}
+
+                                <div class="badge-sec" ><div  class="badge badge--yellow" style="background: rgba(255, 0, 0, 0.25);">{{events_list.registration}}</div>
+
+                            {% endif %} 
+                        </div>
+                    </div></div>
                       
                     <p>{{events_list.description|safe}}</p>
                     <div>
 
+                    <div class="flex-container">
+                        <div class="flex-item-bottom-left">
+                            <div ><strong>Start </strong></div>
+                            <div ><span >{{events_list.start_date|date:"F j, o"}}</span></div>
+                            <br>
+                        </div>
+                            <div class="flex-item-bottom-middle-left">
+                             <div ><strong>End </strong></div>
+                            <div ><span>{{events_list.end_date|date:"F j, o"}}</span></div>
+                            <br>
+                        </div>
+                            <div class="flex-item-bottom-right">
+                            <div ><strong>Event Type</strong> </div>
+                            <div >{{events_list.event_type}}</span> </div>
+                            <br>
+
+                        </div>
+                            <div class="flex-item-bottom-middle-right">
+                            <div ><a class="btn btn--border" href="{% url 'event_detail' events_list.title_slug  %}">View More</a></div>
+
+                        </div>
+
                     </div>
-                        <div class="row">
-                            <div class="col-3 col-md-3 col-s-12"><strong>Start </strong></div>
-                            <div class="col-3 col-md-3 col-s-12"><strong>End </strong></div>
-                            <div class="col-3 col-md-3 col-s-12"><strong>Event Type</strong> </div>
-                            <div class="col-3 col-md-3 col-s-12"><a class="btn btn--border" href="{% url 'event_detail' events_list.title_slug  %}">More</a></div>
-                        </div>
-                         <div class="row">
-                            <div class="col-3 col-md-3 col-s-12"><span >{{events_list.start_date|date:"jS M o"}}</span></div>
-                            <div class="col-3 col-md-3 col-s-12"><span>{{events_list.end_date|date:"jS M o"}}</span></div>
-                            <div class="col-3 col-md-3 col-s-12">{{events_list.event_type}}</span> </div>
-                            <div class="col-3 col-md-3 col-s-12"></div>
-                        </div>
                
                 </article>
                 
@@ -106,7 +166,6 @@
 {% endblock %}
 {%block js%}
 <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
 <script
     type='text/javascript'>(function ($) { window.fnames = new Array(); window.ftypes = new Array(); fnames[0] = 'EMAIL'; ftypes[0] = 'email'; fnames[1] = 'FNAME'; ftypes[1] = 'text'; fnames[2] = 'LNAME'; ftypes[2] = 'text'; fnames[3] = 'ADDRESS'; ftypes[3] = 'address'; fnames[4] = 'PHONE'; ftypes[4] = 'phone'; fnames[5] = 'BIRTHDAY'; ftypes[5] = 'birthday'; }(jQuery)); var $mcj = jQuery.noConflict(true);</script>
 {%endblock%}
