--- a/templates/EventsEngine/event_list.html
+++ b/templates/EventsEngine/event_list.html
@@ -31,11 +31,11 @@
 }
 
 .flex-item-bottom-middle-right {
-  flex: 25%;
+  flex: 19%;
 }
 
 .flex-item-bottom-right {
-  flex: 25%;
+  flex: 31%;
 }
 
 /* Responsive layout - makes a one column layout instead of a two-column layout */
@@ -77,7 +77,7 @@
                 <article class="post-blog">
                      <div class="flex-container">
                         <div class="flex-item-top-left">
-                            <div class=""><h4 >{{events_list.title |safe}}</h4></div>
+                            <div ><h4 ><a href="{% url 'event_detail' events_list.title_slug  %}">{{events_list.title |safe}}</a></h4></div>
                         </div>
                         <div class="flex-item-top-right">
 
@@ -94,7 +94,7 @@
                     </div></div>
                       
                     <p>{{events_list.description|safe}}</p>
-                    <div>
+                  
 
                     <div class="flex-container">
                         <div class="flex-item-bottom-left">
@@ -113,12 +113,11 @@
                             <br>
 
                         </div>
-                            <div class="flex-item-bottom-middle-right">
-                            <div ><a class="btn btn--border" href="{% url 'event_detail' events_list.title_slug  %}">View More</a></div>
+
+                            <div class="flex-item-bottom-middle-right" >
+                            <div ><span></span><a class="btn btn--border" href="{% url 'event_detail' events_list.title_slug  %}">View More</a></div>
 
                         </div>
-
-                    </div>
                
                 </article>
                 
