Event details updated

--- a/templates/EventsEngine/event_detail.html
+++ b/templates/EventsEngine/event_detail.html
@@ -2,8 +2,8 @@
 {% load static %}
 {% block meta_tags %}
 <meta content="" name="keywords">
-<meta property="og:title" content="{{event.title}}">
-<meta name="description" property="og:description" content="{{ event.description|striptags|truncatewords:20 }}">
+<meta property="og:title" content="">
+<meta name="description" property="og:description" content="">
 <meta property="og:type" content="article">
 <meta property="og:image" content="https://www.hackforchange.co.in/static/images/hfc.png">
     <link type="text/css" rel="stylesheet" href="{% static 'css/event.css' %}" />
