Event list page button changes to View details

--- a/templates/EventsEngine/event_list.html
+++ b/templates/EventsEngine/event_list.html
@@ -108,7 +108,7 @@
                             <br>
                         </div>
                             <div class="flex-item-bottom-middle-right" >
-                            <div ><span></span><a class="btn btn--border" href="{% url 'event_detail' events_list.title_slug  %}">View More</a></div>
+                            <div ><span></span><a class="btn btn--border" href="{% url 'event_detail' events_list.title_slug  %}">View details</a></div>
                         </div>
                
                 </article>
