Added Discord Icon/Link & Shruti's Image

--- a/templates/HFC/about.html
+++ b/templates/HFC/about.html
@@ -101,6 +101,15 @@
                                 <p>Leads the design effort for hack for change and all its outreach channels</p>
                             </div>
                         </div>
+                                                <div class="about-team__sec">
+                            <div class="about-team__fig">
+                                <img width="100" src="{% static 'images/shruti.jpg' %}" alt="Shruti Pandey">
+                            </div>
+                            <div class="about-team__info">
+                                <h4>Shruti Pandey<span>Community Manager</span></h4>
+                                <p>Leads the community effort for hack for change and all its outreach channels</p>
+                            </div>
+                        </div>
                     </div>
             </section>
 
