--- a/templates/HFC/footer.html
+++ b/templates/HFC/footer.html
@@ -58,9 +58,9 @@
             <div class="footer__right">
                 <p class="small bold">Social Media</p>
                 <ul>
-                    <li><a href="https://www.facebook.com/HackForChange"><img width="30"
+                    <li><a href="https://www.facebook.com/HackForChange"><img width="31"
                                 src="{% static 'images/facebook-icon.svg' %}" alt="Icon"></a></li>
-                    <li><a href="https://www.instagram.com/hackforchange/"><img width="35"
+                    <li><a href="https://www.instagram.com/hackforchange/"><img width="31"
                                 src="{% static 'images/insta-icon.svg' %}" alt="Icon"></a></li>
                     <li><a href="https://www.linkedin.com/showcase/hack-for-change"><img width="31"
                                 src="{% static 'images/linkedin-icon.svg' %}" alt="Icon"></a></li>
@@ -71,6 +71,8 @@
                             src="{% static 'images/twitter-img.png' %}" alt="Icon"></a></li>
                     <li><a href="https://github.com/HackForChangeIN"><img width="31"
                             src="{% static 'images/github-img.png' %}" alt="Icon"></a></li>
+                    <li><a href="https://discord.gg/mnSrEBvXct"><img width="31"
+                            src="{% static 'images/discord-img.png' %}" alt="Icon"></a></li>
 
                 </ul>
                 <a href="{% url 'donate' %}" class="btn btn--border">Donate</a>
